--- a/#8 БТ_Волновые явления и МКТ.md
+++ b/#8 БТ_Волновые явления и МКТ.md
@@ -146,7 +146,7 @@ $\langle u \rangle = \sqrt{\frac{2kT}{m_{0}}}$
 
 - среднюю квадратичную скорость:
 
-$u_{_{кв}} = \sqrt{\frac{2kT}{m_{0}}}$
+$u_{_{кв} = \sqrt{\frac{2kT}{m_{0}}$
 
 - **Наиболее вероятная скорость** – это скорость, вблизи которой на единичный интервал скоростей приходится наибольшее число молекул.
 
@@ -205,6 +205,7 @@ $p = p_{0} \cdot e^{\frac{m_{0} g \cdot h}{kT}}$
 
  
  
+
 
 
 
