Update #8 БТ_Волновые явления и МКТ.md

--- a/#8 БТ_Волновые явления и МКТ.md
+++ b/#8 БТ_Волновые явления и МКТ.md
@@ -146,7 +146,7 @@ $\langle u \rangle = \sqrt{\frac{2kT}{m_{0}}}$
 
 - среднюю квадратичную скорость:
 
-$u_{_{кв} = \sqrt{\frac{2kT}{m_{0}}$
+$u_{кв} = \sqrt{\frac{2kT}{m_{0}}}$
 
 - **Наиболее вероятная скорость** – это скорость, вблизи которой на единичный интервал скоростей приходится наибольшее число молекул.
 
@@ -170,7 +170,9 @@ $n_{0} = n_{00} \cdot e^{\frac{m_{0} g \cdot h}{kT}}$
 
 $p = p_{0} \cdot e^{\frac{m_{0} g \cdot h}{kT}}$
 
-- где $𝑝_{0}$ – давление на высоте h=0, 𝑝 - давление на высоте ℎ. Барометрическая формула позволяет экспериментально определить высоту h, измерив давление р0 на поверхности земли и давление р на высоте h. 
+- где $𝑝_{0}$ – давление на высоте h=0, 𝑝 - давление на высоте ℎ. Барометрическая формула позволяет экспериментально определить высоту h, измерив давление р0 на поверхности земли и давление р на высоте h.
+
+$h = \frac{R \cdot T}{g \cdot \mu} \cdot \ln\left\frac{p_0}{p}\right$
 
 ![image](https://iili.io/fFkin8N.md.jpg)
 
@@ -205,6 +207,7 @@ $p = p_{0} \cdot e^{\frac{m_{0} g \cdot h}{kT}}$
 
  
  
+
 
 
 
