--- a/#8 БТ_Волновые явления и МКТ.md
+++ b/#8 БТ_Волновые явления и МКТ.md
@@ -172,7 +172,7 @@ $p = p_{0} \cdot e^{\frac{m_{0} g \cdot h}{kT}}$
 
 - где $𝑝_{0}$ – давление на высоте h=0, 𝑝 - давление на высоте ℎ. Барометрическая формула позволяет экспериментально определить высоту h, измерив давление р0 на поверхности земли и давление р на высоте h.
 
-$h = \frac{R \cdot T}{g \cdot \mu} \cdot \ln\left\frac{p_0}{p}\right$
+$h = \frac{R \cdot T}{g \cdot \mu} \cdot \ln\frac{p_0}{p}$
 
 ![image](https://iili.io/fFkin8N.md.jpg)
 
@@ -207,6 +207,7 @@ $h = \frac{R \cdot T}{g \cdot \mu} \cdot \ln\left\frac{p_0}{p}\right$
 
  
  
+
 
 
 
