--- a/#9 БТ_МКТ.md
+++ b/#9 БТ_МКТ.md
@@ -76,9 +76,9 @@ $dU = \frac{i}{2}  \frac{m}{\mu} \cdot R \cdot dT$
 
 - Термодинамические процессы удобно изучать и сравнивать друг с другом, используя их графическое изображение. 
 
-- Работа, совершаемая системой в конечном процессе 1→2, равна алгебраической сумме работ 𝛿𝐴, совершаемых системой на всех участках этого процесса:$A_{1 \to 2} = \int\limits_{1}^{2} \delta A = \int\limits_{V_1}^{V_2} p \cdot dV$
+- Работа, совершаемая системой в конечном процессе 1→2, равна алгебраической сумме работ 𝛿𝐴, совершаемых системой на всех участках этого процесса: $A_{1 \to 2} = \int_1^2 \delta A = \int_{V_1}^{V_2} p \, dV$
 
-- Работа, совершаемая термодинамической системой в процессе 1→2, измеряется площадью, ограниченной кривой процесса 1→2, осью абсцисс и ординатами 𝑝_1 и 𝑝_2 точек 1 и 2. Если система совершает процесс по замкнутой кривой 1-а-2-б-1, то есть система возвратилась в исходное состояние, в этом случае полная работа не равна нулю. Положительная работа расширения (1-а-2), превышает отрицательную работу (2-б-1). 
+- Работа, совершаемая термодинамической системой в процессе 1→2, измеряется площадью, ограниченной кривой процесса 1→2, осью абсцисс и ординатами $𝑝_{1}$ и $𝑝_{2}$ точек 1 и 2. Если система совершает процесс по замкнутой кривой 1-а-2-б-1, то есть система возвратилась в исходное состояние, в этом случае полная работа не равна нулю. Положительная работа расширения (1-а-2), превышает отрицательную работу (2-б-1). 
 
 # Теплоемкость вещества
 
@@ -96,13 +96,13 @@ $dU = \frac{i}{2}  \frac{m}{\mu} \cdot R \cdot dT$
 
 - это процесс изменения состояния термодинамической системы при постоянном объеме (𝑉=𝑐𝑜𝑛𝑠𝑡, 𝑑𝑉=0). В изохорном процессе газ не совершает работы: 𝛿𝐴=𝑝∙𝑑𝑉=0. Для изохорного процесса 𝑝−𝑉 диаграмма имеет вид, представленный на рисунке.
 
-- Согласно первому закону термодинамики, вся теплота, сообщаемая газу в изохорном процессе, идет на изменение его внутренней энергии:  $\frac{m}{\mu} \cdot C_{v} \, dT = dU = dQ$, где CV - молярная теплоемкость идеального газа при постоянном объеме (изохорная теплоемкость). 
+- Согласно первому закону термодинамики, вся теплота, сообщаемая газу в изохорном процессе, идет на изменение его внутренней энергии:  $\frac{m}{\mu} \cdot C_{v} \, dT = dU = dQ$, где $C_{V}$ - молярная теплоемкость идеального газа при постоянном объеме (изохорная теплоемкость). 
 
 # Изобарный процесс 
 
 - это процесс изменения состояния термодинамической системы при постоянном давлении (p=const). Для изобарного процесса p-V диаграмма имеет вид, пред-ставленный на рисунке.
 
-- Элементарная теплота δQ, сообщаемая газу в изобарном процессе, равна: :$dQ = \frac{m}{\mu} \cdot C_p \, dT$. Из уравнения Менделеева-Клапейрона можно записать, что $\delta A = p \, dV = \frac{m}{\mu} R \, dT$. Соответственно I закон термодинамики примет вид: 
+- Элементарная теплота δQ, сообщаемая газу в изобарном процессе, равна: : $dQ = \frac{m}{\mu} \cdot C_p \, dT$ . Из уравнения Менделеева-Клапейрона можно записать, что $\delta A = p \, dV = \frac{m}{\mu} R \, dT$. Соответственно I закон термодинамики примет вид: 
 
 $\frac{m}{\mu} \cdot C_p \, dT = \frac{m}{\mu} \cdot C_v \, dT + \frac{m}{\mu} R \, dT 
 \quad \Rightarrow \quad 
@@ -201,6 +201,7 @@ $\eta = \frac{Q_1 - Q_2}{Q_1}, \quad \eta < \eta_{k}$
 
 
  
+
 
 
 
