--- a/#11 БТ_Электростатика.md
+++ b/#11 БТ_Электростатика.md
@@ -64,7 +64,8 @@ $\vec{E} = \vec{E}_1 + \vec{E}_2 + \ldots + \vec{E}_N$
 
 - Величина, равная произведению заряда q на плечо диполя Величина, равная произведению заряда q на плечо диполя 
 $\boxed{\vec{\ell}}$
-, называется электрическим моментом диполя, или дипольным моментом,$\vec{p} = q \cdot \vec{\ell}$
+, называется электрическим моментом диполя, или дипольным моментом
+$\vec{p} = q \cdot \vec{\ell}$
 
 # Поляризация диэлектриков
 
@@ -110,7 +111,7 @@ $d\Phi_D = D_n \cdot dS$
 
 - А полный поток вектора индукции через всю поверхность находят интегрированием предыдущего выражения :
 
-$\Phi_D = \iint_S D_n \, dS$
+$\Phi_D = \int_S D_{n} \cdot dS$
 
 # Теорема Остроградского - Гаусса 
 
@@ -120,7 +121,7 @@ $D_n = \frac{1}{4\cdot\pi} \cdot \frac{q}{R^2}$
 
 - Определим поток вектора индукции электрического поля через рассматриваемую сферическую поверхность:
 
-$\Phi_D = \frac{1}{4\cdot\pi} \cdot \frac{q}{R^2} \int_S dS = \frac{1}{4\cdot\pi} \cdot \frac{q}{R^2} \cdot 4\cdot\pi \cdot R^2 = q$
+$\Phi_D = \frac{1}{4\cdot\pi} \cdot \frac{q}{R^2} \int_{S} dS = \frac{1}{4\cdot\pi} \cdot \frac{q}{R^2} \cdot 4\cdot\pi \cdot R^2 = q$
 
 - Т.е. «Поток вектора электрической индукции через произвольную замкнутую поверхность равен алгебраической сумме электрических зарядов, находящихся внутри этой поверхности»
 
@@ -128,7 +129,7 @@ $\Phi_D = \int_{S} D_n \cdot dS = \sum_{i=1}^n q_i$
 
 # Потенциал электрического поля
 
-- Поскольку электрическое поле является потенциальным, работа, совершаемая электрическим полем при перемещении электрического заряда $q_{0}, равна уменьшению потенциальной энергии этого заряда $𝑑𝐴=−𝑑𝑊_{П}$. Так как $𝑑𝐴=𝑞_{0}\cdot𝐸\cdot𝑑𝑟,$ где $𝐸=\frac{k\cdot𝑞}{\varepsilon\cdot 𝑟^{2}}$, то:
+- Поскольку электрическое поле является потенциальным, работа, совершаемая электрическим полем при перемещении электрического заряда $q_{0}$, равна уменьшению потенциальной энергии этого заряда $𝑑𝐴=−𝑑𝑊_{П}$. Так как $𝑑𝐴=𝑞_{0}\cdot𝐸\cdot𝑑𝑟,$ где $𝐸=\frac{k\cdot𝑞}{\varepsilon\cdot 𝑟^{2}}$, то:
 
 $W_{\text{П}} = k \cdot \frac{q \cdot q_0 \cdot dr}{\varepsilon \cdot r^2}$
 
@@ -235,6 +236,7 @@ $W_{\text{Э}} = \frac{C \cdot U^2}{2}$
 
 
  
+
 
 
 
