--- a/#11 БТ_Электростатика.md
+++ b/#11 БТ_Электростатика.md
@@ -129,7 +129,7 @@ $\Phi_D = \int_{S} D_n \cdot dS = \sum_{i=1}^n q_i$
 
 # Потенциал электрического поля
 
-- Поскольку электрическое поле является потенциальным, работа, совершаемая электрическим полем при перемещении электрического заряда $q_{0}$, равна уменьшению потенциальной энергии этого заряда $𝑑𝐴=−𝑑𝑊_{П}$. Так как $𝑑𝐴=𝑞_{0}\cdot𝐸\cdot𝑑𝑟,$ где $𝐸=\frac{k\cdot𝑞}{\varepsilon\cdot 𝑟^{2}}$, то:
+- Поскольку электрическое поле является потенциальным, работа, совершаемая электрическим полем при перемещении электрического заряда $$q_{0}$$, равна уменьшению потенциальной энергии этого заряда $𝑑𝐴=−𝑑𝑊_{П}$. Так как $𝑑𝐴=𝑞_{0}\cdot𝐸\cdot𝑑𝑟,$ где $𝐸=\frac{k\cdot𝑞}{\varepsilon\cdot 𝑟^{2}}$, то:
 
 $W_{\text{П}} = k \cdot \frac{q \cdot q_0 \cdot dr}{\varepsilon \cdot r^2}$
 
@@ -145,7 +145,7 @@ $W_{\text{П}} = k \cdot \frac{q \cdot q_0}{\varepsilon \cdot r}$
 
 # Потенциал электрического поля
 
-- Потенциальная энергия обладает свойством аддитивности. Поэтому потенциальная энергия заряда $q_{0} в электрическом поле точечных зарядов $q_{1}$, $q_{2}$,… qn равна сумме потенциальных энергий, обусловленных воздействием каждого заряда.
+- Потенциальная энергия обладает свойством аддитивности. Поэтому потенциальная энергия заряда $q_{0}$ в электрическом поле точечных зарядов $q_{1}$, $q_{2}$,… qn равна сумме потенциальных энергий, обусловленных воздействием каждого заряда.
 
 $W_{\text{П}} = \sum_{i=1}^n W_{\text{П}i} = q_0 \cdot \sum_{i=1}^n k \cdot \frac{q_i}{\varepsilon \cdot r_i}$
 
@@ -153,7 +153,7 @@ $W_{\text{П}} = \sum_{i=1}^n W_{\text{П}i} = q_0 \cdot \sum_{i=1}^n k \cdot \f
 
 $\varphi = \frac{W_{\text{П}}}{q_0} = \sum_{i=1}^n k \cdot \frac{q_i}{\varepsilon \cdot r_i}$
 
-- Здесь $𝑟_{𝑖} – расстояние от точки поля с потенциалом $𝜑_{𝑖}$ до заряда $q_{0}$. Параметр φ называется потенциалом данной точки поля. Единицей измерения потенциала в СИ является вольт – В.
+- Здесь $𝑟_{𝑖}$ – расстояние от точки поля с потенциалом $𝜑_{𝑖}$ до заряда $q_{0}$. Параметр φ называется потенциалом данной точки поля. Единицей измерения потенциала в СИ является вольт – В.
 
 # Потенциал электрического поля
 
@@ -203,7 +203,7 @@ $C = \frac{\varepsilon \cdot \varepsilon_0 \cdot S}{d}$
 
 - Конденсатор, который состоит из двух проводников в виде концентрических сфер, называется **сферическим, или шаровым, конденсатором.**
 
-- Один фарад – это электроёмкость конденсатора, у которого при заряде каждой пластины в 1 Кл напряжение между пластинами U=1В. Один фарад – это очень большая ёмкость, поэтому используют более мелкие единицы ёмкости $– 1 мкФ=10^{-6} Ф.
+- Один фарад – это электроёмкость конденсатора, у которого при заряде каждой пластины в 1 Кл напряжение между пластинами U=1В. Один фарад – это очень большая ёмкость, поэтому используют более мелкие единицы ёмкости $– 1 мкФ=10^{-6} Ф$.
 
 # Конденсаторы
 
@@ -236,6 +236,7 @@ $W_{\text{Э}} = \frac{C \cdot U^2}{2}$
 
 
  
+
 
 
 
