--- a/#12 БТ_Электродинамика.md
+++ b/#12 БТ_Электродинамика.md
@@ -107,7 +107,7 @@ $I = \frac{\varepsilon}{R + r}$
 
 - Работа, совершаемая электрическим полем источника при перемещении заряда на внешнем участке цепи, является полезной работой $𝐴_{П}=𝐼^{2} \cdot 𝑅.$ Эта работа составляет только часть всей работы $𝐴=𝐼^{2}\cdot(𝑅+𝑟),$ совершаемой сторонними силами. КПД источника определяется:
 
-$\eta = \frac{A_{\text{П}}}{A} \cdot 100\% = \frac{R}{R + r} \cdot 100\%$
+$$\eta = \frac{A_{\text{П}}}{A} \cdot 100\% = \frac{R}{R + r} \cdot 100\%$$
 
 - Таким образом, КПД электрической цепи определяется соотношением между её внешним и полным электрическим сопротивлением. 
 
@@ -212,6 +212,7 @@ $dF = I \cdot dl \cdot B \cdot \sin\alpha$
 
 
      
+
 
 
 
