--- a/#13 БТ_Оптика.md
+++ b/#13 БТ_Оптика.md
@@ -158,7 +158,7 @@ $I = 0,5 \cdot I_0 \cdot \cos^2\varphi$
 
 - Угол падения $𝛼=𝛼_{Б}$, при котором отражённый луч полностью поляризован, называется углом полной поляризации, или **углом Брюстера**
 
-$\tg\alpha_{\text{Б}} = n_{21}$
+$tg\alpha_{\text{Б}} = n_{21}$
 
 # Физика
 
@@ -222,6 +222,7 @@ $\nu_{0} = \frac{A}{\hbar}$
 
 
  
+
 
 
 
